# GPRo

./: .gitignore  Achando o X e Y com  um vision sensor.md  README.md  V-rep.md  start.md
3Servos_e_1Segredo/: Um_____Segredo.ttt  marcus.ttt  marcus2.ttt
3Servos_e_1Segredo/CPPremoteAPI_3Servos/: main.cpp
Arena IEEE open/: Arena IEEE open.ttt
Arena IEEE open/CPPremoteAPI/: CMakeLists.txt  main.cpp
Arena IEEE open/CPPremoteAPI/.kdev4/: CPPremoteAPI.kdev4
Arena IEEE open/CPPremoteAPI/VDC/: Skills.cpp  Skills.h  Utilities.h  VDC.cpp  VDC.h  Vdc.cpp  Vdc.h  VrepToOpencv.cpp  VrepToOpencv.h  extras.cpp  extras.h
Arena IEEE open/CPPremoteAPI/VDC/Neuron/: neuron.cpp  neuron.h
Arena IEEE open/CPPremoteAPI/VDC/OpenCV/: functionsOpenCV.h
Arena IEEE open/CPPremoteAPI/VDC/SOM/: DataSet.cpp  DataSet.h  Node.cpp  Node.h  SOM.cpp  SOM.h  Sample.cpp  Sample.h  Utils.h
Arena IEEE open/CPPremoteAPI/nbproject/: configurations.xml  project.xml
Arena IEEE open/CPPremoteAPI/nbproject/private/: Default.properties  configurations.xml  private.xml
Arena IEEE open/Rôbo.stls/: robo completo - Montagem1-1 8mm 150mm-1.STL  robo completo - Montagem1-1 8mm 150mm-2.STL  robo completo - Montagem1-1 Montagem-1 Punho-1.STL  robo completo - Montagem1-1 Montagem-1 Servo 9g-1.STL  robo completo - Montagem1-1 Montagem-1 dedo D (motor)-1.STL  robo completo - Montagem1-1 Montagem-1 dedo E-1.STL  robo completo - Montagem1-1 Montagem-1 mão-1.STL  robo completo - Montagem1-1 base garra-1.STL  robo completo - Montagem1-1 conector garra-1.STL  robo completo - Montagem1-1 correia-1.STL  robo completo - Montagem1-1 ligacao correia-barra-1.STL  robo completo - Montagem1-1 motor-1.STL  robo completo - Montagem1-1 polia-1.STL  robo completo - Montagem1-1 rolamento linear-1.STL  robo completo - Montagem1-1 rolamento linear-2.STL  robo completo - acoplamento servo-base_garra-1.STL  robo completo - andar 1-1.STL  robo completo - andar 2-1.STL  robo completo - apoio braco copo-1.STL  robo completo - barra rosqueada-1.STL  robo completo - barra rosqueada-4.STL  robo completo - barra rosqueada-5.STL  robo completo - barra rosqueada-6.STL  robo completo - copo-1.STL  robo completo - roda-1.STL  robo completo - roda-2.STL  robo completo - roda-4.STL  robo completo - roda-5.STL  robo completo - servo mg995-1.STL  robo completo - servo mg995-2.STL  robo completo - servo mg995-3.STL  robo completo - servo mg995-4.STL
Arena IEEE open/V-REP_PRO_EDU_V3_4_0_Linux/: AUTO_SAVED_INSTANCE_2.ttt  bubbleRobClient  bubbleRobServer  credits.txt  externalIkDemo1  externalIkDemo2  externalIkDemo3  libCGAL.so.12.0.0  libLoadErrorCheck.sh  libboost_serialization.so.1.54.0  libompl.so.11  libtbb.so.2  libtbb_preview.so.2  libtbbmalloc.so.2  libtbbmalloc_proxy.so.2  mtbServer  rcsServer  readme.txt  remoteApiConnections.txt  rosBubbleRob2  vrep  vrep.sh  vrepAddOnFunc_minimalisticExporter.lua  vrepAddOnFunc_minimalisticImporter.lua  vrepAddOnScript-addOnScriptDemo.lua  vrepProEduV304XX-LicenseAgreement.txt
Arena IEEE open/v_repExtOpenCVBridge/: teste.cpp
BackpropagationInVrep/: BackPropagation In Vrep.md  base_tutorial_vrep.ttt
BackpropagationInVrep/CPPremoteAPI/: CMakeLists.txt  main.cpp
BackpropagationInVrep/MLP_RemoteAPI/: main.cpp
ESP/: README.md
ESP/reflectance_sensor/: README.md  reflectance_sensor.ino
ESP/writing_an_web_page/: README.md  (+1 more)
IEEE Codes 2016/: aruco_test.cpp  empty_terrines.pat  exchange_zone.pat  pevaca.cpp_  tuntstunts  tuntstunts.cpp  vaca  vaca.cpp
ImageProcessing/: README.md
OpenCV - vaquinhAgo/: find_corners_shi.cpp  find_linhas_paralelas.cpp  follow_color_w_dots.cpp  kmeans_example.cpp  neuralVaquinha.cpp  svm_example.cpp  teste_quina.cpp  vaquinhAgo.cpp
Samara/: O Chamado.ttt
SerialCommunication/: README.md
URA/papelao_azul/CPPremoteAPI  Papelao conhecimentos /: CMakeLists.txt  main.cpp
arduino/: README.md
cena inicial/: inicio.ttt
(+2076 files in other folders)
